# tax

./: BENCHMARK_RESULTS.md
tax-platform/: Cargo.toml  README.md
tax-platform/libs/tax/: Cargo.toml
tax-platform/libs/tax/src/: events.rs  file_metadata.rs  lib.rs
tax-platform/libs/tfolder/: Cargo.toml
tax-platform/libs/tfolder/src/: errors.rs  lib.rs
tax-platform/libs/tfolder/src/entities/: geo_point.rs  mod.rs  tax_rule.rs
tax-platform/libs/tfolder/src/value_objects/: mod.rs  nation.rs  tax_code.rs
tax-platform/libs/utils/: Cargo.toml
tax-platform/libs/utils/src/: file_naming.rs  hashing.rs  lib.rs  scheduler.rs  unzip.rs
tax-platform/queues/: curr.load.queue  geo.load.queue  load.completion.queue  load.error.queue  rbd.load.queue  tax.load.queue
tax-platform/services/file-validator/: Cargo.toml
tax-platform/services/file-validator/src/: main.rs
tax-platform/services/file-validator/src/presentation/: consumer.rs  http.rs  mod.rs
tax-platform/services/load-coordinator/: Cargo.toml
tax-platform/services/snapshot-manager/: Cargo.toml
tax-platform/services/tax-loader/: Cargo.toml
