[workspace]
members = [
    "libs/taxonomy",
    "libs/orchestrator-models", 
    "libs/utils",
    "services/file-validator",
    "services/load-coordinator",
    "services/tax-loader",
    "services/snapshot-manager"
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
kafka = "0.9"
aws-sdk-s3 = "1.0"
aws-sdk-sqs = "1.0"
zip = "0.6"
regex = "1.0"
sha2 = "0.10"
hex = "0.4"
